# openlink

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  build_extension.ps1  install.ps1  install.sh  kill_backend_server_via_port_39527.bat  package-lock.json  start.bat  start.ps1  start_quick.ps1
.claude/: settings.json
.claude/skills/openlink-version-bump/: SKILL.md
.claude/skills/version-bump/: SKILL.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/endpoints/: auth.py  config.py  exec.py  files.py  health.py  prompt.py  skills.py  tools.py
backend/app/core/security/: auth.py  sandbox.py
backend/app/executor/: executor.py
backend/app/schemas/: types.py
backend/app/skills/: loader.py
backend/app/tools/: base.py  edit.py  exec_cmd.py  glob_tool.py  grep_tool.py  invalid.py  list_dir.py  question.py  read_file.py  registry.py  skill.py  todo_write.py  web_fetch.py  write_file.py
backend/app/utils/: truncate.py
backend/openlink.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: development.md  tool-error-response.md  version-bumping.md
docs/sites/: deepseek-adapt.md
extension/: README.md  package-lock.json  package.json  vite.config.ts
extension/public/: manifest.json
extension/src/content/: index.ts
extension/src/injected/: index.ts
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/api/: endpoints.ts
frontend/src/components/: FileList.vue  Layout.vue  Navbar.vue  StatusIndicator.vue  ToolForm.vue  ToolResultCard.vue
frontend/src/composables/: useConnection.ts  useToolExecution.ts
frontend/src/pages/: Connection.vue  Dashboard.vue  FileBrowser.vue  PromptViewer.vue  Settings.vue  SkillsView.vue  ToolConsole.vue
frontend/src/router/: index.ts
frontend/src/stores/: connection.ts  skills.ts  tools.ts
frontend/src/types/: index.ts
scripts/: README.md  build.sh  bump_version.ps1  bump_version.sh  deploy-extension.sh  sync_skill_copies.sh
(+4 files in other folders)
